# dafny_laurel_repair

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_RICOSTYNHA.md  analysis_changing.ipynb  artifact.md  launch_nfold.py  launch_nfold_cedar.py  launch_nfold_vmc.py  launch_varying_examples.py  pyproject.toml
configs/: config.yaml  config_llm_DafnyVMC_sample10.yaml  config_llm_cedar_sample10.yaml  config_llm_cedar_sample10_static.yaml  config_llm_libraries_sample10.yaml  config_llm_libraries_sample10_staticp.yaml  config_llm_test.yaml  config_pruning.yaml  config_pruning_awsencryptionsdk.yaml  config_pruning_cedar.yaml  config_pruning_libraries.yaml  config_pruning_stdlib.yaml  config_pruning_test.yaml  config_pruning_vmc.yaml
configs/main/: exp.yaml
laurel/: Method.py  config_parsing.py  error_parser.py  exp_launcher.py  generating_llm_fix.py  google_uploader.py  llm_prompt.py  placeholder_wrapper.py  placeholder_wrapper_original.py  select_example.py  utils.py
laurel/placeholder_finder/: Program.best_so_far_my_find  ProgramFunctionNotWorking.fornow.old
laurel/placeholder_finder_better/: placeholder_finder_laurel_better.csproj
laurel/similarity/: embedding_lib.py  get_distance_matrix.py
laurel/tokenizer_csharp/: Program.cs
notebooks/: analysis_multiexp.ipynb  clustering_analysis.ipynb  dashboard.ipynb  dataset_analysis.ipynb  getting_started_report.ipynb  intersect.ipynb  llm_fix.ipynb  location_analysis.ipynb  nb_tries_analysis.ipynb  nfold.ipynb  prep_training_set.ipynb  prepare_benchhmarck.ipynb  pruning_analysis.ipynb  samples_study.ipynb  success_analysis.ipynb  test_chatgpt.ipynb  token_analysis.ipynb
prompts/: 109.dfy  109_fix.dfy  4586789e1af32732224d7b7c31ccb55035ffac04_fix.dfy  LemmaMaxOfConcat.dfy  LemmaMaxOfConcat_fix.dfy
samples/: non_verified_cedar_sample_10.csv  non_verified_dafnyVMC_sample_10.csv  non_verified_libraries_sample_10.csv
saved_results/: output_baselineEnhancedPrompt_cedar-basic.csv  output_baselineEnhancedPrompt_libraries-basic.csv  output_baselineEnhancedPrompt_vmc-basic.csv  output_baseline_cedar-basic.csv  output_baseline_libraries-basic.csv  output_baseline_vmc-basic.csv  output_errorIterate_cedar-basic.csv  output_errorIterate_libraries-basic.csv  output_errorIterate_vmc-basic.csv  output_error_cedar-basic.csv  output_error_libraries-basic.csv  output_error_vmc-basic.csv  output_errorplaceholder_cedar-basic.csv  output_errorplaceholder_libraries-basic.csv  output_errorplaceholder_vmc-basic.csv  output_placeholder_cedar-basic.csv  output_placeholder_libraries-basic.csv  output_placeholder_vmc-basic.csv
saved_results/tmp_cedar/: output_EmbeddedPlaceholder-r3_cedar_0.csv  output_EmbeddedPlaceholder-r3_cedar_1.csv  (+264 more)
scripts/: launch_nfold.py  placeholder.py  similarity.py
src/: Method.py  config_parsing.py  dafny_utils.py  error_parser.py  exp_launcher.py  generating_llm_fix.py  google_uploader.py  llm_prompt.py  logger_config.py  placeholder_wrapper.py  pruning.py  select_example.py  test_harness.py  token_wrapper.py  utils.py
tests/: test_llm.py  test_prunning.py
tests_package/: test_llm.py  test_placeholder_finder.py  test_prunning.py
(+498 files in other folders)
