[tool.poetry]
name = "proof-repair"
version = "0.1.0"
description = "Tool to automatically fix Dafny proofs"
authors = ["emugnier <emugnier@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "0.28.1"
ruff = "^0.1.0"
pyyaml = "^6.0.1"
pandas = "^2.1.3"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.11.0"}
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".ipynb_checkpoints",
  ".pre-commit-config.yaml",
]

[tool.black]
exclude = '''
/(
  \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| .*ipynb_checkpoints.*
| .pre-commit-config.yaml
)/
'''

[tool.poetry.scripts]
pythonpath = "tests"
test = 'tests:test_main.__main__'
